@@ -166,5 +166,9 @@ void InitWebCoreSystemInterface(void)
     INIT(CreateVMPressureDispatchOnMainQueue);
 #endif
 
+#if !defined(BUILDING_ON_SNOW_LEOPARD) && !defined(BUILDING_ON_LION)
+    INIT(GetMacOSXVersionString);
+#endif
+
     didInit = true;
 }
